<resources>
    <string name="app_name">Flow It</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_project">New Project</string>
    <string name="new_task">New Task</string>
    <string name="example">example</string>
    <string name="set_start_date">Set Start date</string>
    <string name="set_end_date">Set End date</string>
    <string name="tap_to_add_description">Tap to add description</string>
    <string name="title">Title</string>
    <string name="set_date">Set date</string>
    <string name="workflow_default_workflow">Workflow: Default Workflow</string>
    <string name="priority">Priority</string>
    <string name="add_to_project">Add to project</string>
    <string name="add_assignee">Add assignee</string>
    <string name="create_project">Create Project</string>
    <string name="create_task">Create Task</string>
    <string name="create_subtask">Create SubTask</string>
    <string name="attachment">attachment</string>
    <string name="feng_no_project_find">Nothing Find</string>
    <string name="feng_status">status</string>
    <string name="feng_edit_project">Edit Project</string>
    <string name="feng_project_id">Project ID: </string>
    <string name="feng_due_date">Due date:</string>
    <string name="feng_date_alert">End date can not early than start date</string>
    <string name="due_date">Due Date</string>
    <string name="task_id">Task Id</string>
    <string name="add_to_task">Add to task</string>
    <string name="add_subtask_description">Add subtask description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="signup_success">Signup Successful</string>
    <string name="sign_in">sign in</string>
    <string name="login_fail">Login Fail</string>
    <string name="no_member">No team member yet</string>
    <string name="fcm_title">Task Assignment</string>
    <string name="new_task_assign">New Task Assigned:</string>
    <string name="login_succ">success</string>
    <string name="login_alert">Invalid email/password</string>
    <string name="google_signin">Welcome Back</string>
    <string name="new_assignment">New Assignment</string>
    <string name="subtask_id">subtask id</string>


    <string-array name="priority">
        <item>Default</item>
        <item>High </item>
        <item>Urgent</item>
    </string-array>

    <string-array name="project_status">
        <item>Start new project</item>
        <item>Not complete</item>
        <item>Completed</item>
    </string-array>

    <string-array name="task_status">
        <item>Initial</item>
        <item>In Progress</item>
        <item>Complete</item>
    </string-array>

    <string-array name="roles">
        <item>Manager</item>
        <item>User </item>
    </string-array>

    <string-array name="technologies">
        <item>Butter-knife</item>
        <item>Dagger 2</item>
        <item>Dropbox Cloud File Storage</item>
        <item>Fab Floating Action Buttons</item>
        <item>Firebase Cloud Messaging Service</item>
        <item>Firebase Realtime Database </item>
        <item>Google Single Sign On</item>
        <item>Material Design</item>
        <item>Model View Presenter Architecture</item>
        <item>Rx Validators</item>
        <item>Rx Java</item>
        <item>Network Call: Retrofit</item>
        <item>Network Call: Volley</item>
        <item>Shared Preferences</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logout">Logout</string>
    <string name="pick_file">Please choose a file</string>
    <string name="no_file_picker">No file picker find</string>
    <string name="upload_success">File uploaded successfully</string>
    <string name="abous_us">App Info</string>
    <string name="member_add">Member Added</string>
</resources>
