<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_create_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detail_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <EditText
            android:id="@+id/edt_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/title"
            android:maxLines="4"
            android:padding="@dimen/medium_dimen" />

        <EditText
            android:id="@+id/edt_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_btn_desc"
            android:hint="@string/tap_to_add_description"
            android:maxLines="4"
            android:paddingBottom="@dimen/medium_dimen"
            android:paddingTop="@dimen/normal_dimen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_task_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/medium_dimen"
                android:drawableStart="@drawable/ic_date"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/medium_dimen"
                android:paddingStart="@dimen/medium_dimen"
                android:paddingTop="@dimen/normal_dimen"
                android:text="@string/set_start_date" />

            <TextView
                android:id="@+id/tv_task_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/medium_dimen"
                android:drawableStart="@drawable/ic_date"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/medium_dimen"
                android:paddingStart="@dimen/medium_dimen"
                android:paddingTop="@dimen/normal_dimen"
                android:text="@string/set_end_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dimen"
                android:src="@drawable/ic_members" />


            <b12app.vyom.com.utils.MyFlowlayout
                android:id="@+id/layout_flow_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:pileWidth="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/xxlarge_dimen"
                android:drawableLeft="@drawable/ic_right"
                android:gravity="center_vertical"
                android:onClick="addAssignee"
                android:text="@string/add_assignee" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_add_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_project"
            android:drawablePadding="@dimen/medium_dimen"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_dimen"
            android:text="@string/add_to_project" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/medium_dimen"
            android:paddingTop="@dimen/normal_dimen">

            <ImageView
                android:id="@+id/tv_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/normal_dimen"
                android:paddingStart="@dimen/medium_dimen"
                android:src="@drawable/ic_priority"
                android:text="@string/priority" />


            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:dropDownHorizontalOffset="@dimen/medium_dimen"
                android:dropDownVerticalOffset="@dimen/large_dimen"
                android:entries="@array/priority"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="createTask"
        android:src="@drawable/ic_correct"
        app:backgroundTint="@color/gay4"
        app:backgroundTintMode="src_atop"
        app:borderWidth="3dp"
        app:elevation="5dp"
        app:fabSize="normal"
        app:layout_anchor="@id/detail_ll"
        app:layout_anchorGravity="bottom|end"
        app:rippleColor="@android:color/holo_blue_light"
        app:useCompatPadding="true" />

</android.support.design.widget.CoordinatorLayout>