<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/relativeLt"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <!--<ImageView-->
        <!--android:id="@+id/imageView3"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="match_parent"-->
        <!--app:srcCompat="@mipmap/phoneicon"-->
        <!--tools:layout_editor_absoluteX="29dp"-->
        <!--tools:layout_editor_absoluteY="135dp" />-->

        <EditText
            android:id="@+id/emailTxtLogin"
            android:layout_width="247dp"
            android:layout_height="50dp"
            android:layout_marginLeft="37dp"
            android:paddingStart="@dimen/medium_dimen"
            android:background="@drawable/edittxt_corner"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="128dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <!--<ImageView-->
        <!--android:id="@+id/imageView4"-->
        <!--android:layout_width="43dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--app:srcCompat="@mipmap/pwicon"-->
        <!--tools:layout_editor_absoluteX="29dp"-->
        <!--tools:layout_editor_absoluteY="208dp" />-->


        <EditText
            android:id="@+id/passwordTxtLogin"
            android:layout_width="247dp"
            android:layout_height="50dp"
            android:layout_marginStart="37dp"
            android:paddingStart="@dimen/medium_dimen"
            android:background="@drawable/edittxt_corner"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="230dp"
        android:layout_height="49dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/corners"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="230dp"
        android:layout_height="49dp"
        android:layout_alignStart="@+id/btnlogin"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="@dimen/medium_dimen"
        android:background="@drawable/corners1"
        android:text="need an account?"
        android:textColor="#021e59"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="382dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnlogin"
        android:layout_below="@+id/linearLayout"
        android:layout_marginStart="39dp"
        android:layout_marginTop="@dimen/medium_dimen"
        android:text="@string/remember_me"
        android:textColor="@color/colorPrimary" />

    <com.google.android.gms.common.SignInButton

        android:id="@+id/sign_in_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_signup"
        android:layout_below="@+id/btn_signup"
        android:layout_marginTop="@dimen/medium_dimen" />




</RelativeLayout>